# mcp-vision-server

./: .claude-plugin.json  .env.example  LICENSE  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
mcp_vision_server/: __init__.py  config.py  image.py  providers.py  server.py
tests/: test_config.py  test_normalize.py  test_server.py
